# atom-hack

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0480aefc03c9_user.py  264d0b737d17_remove_journal.py  a3f57d718667_add_timetable.py  ccfdc6b629e9_add_admin.py  eaaa6bacc06c_add_expedition_details.py  eeb44c191c6e_add_models.py
extra/: licence.lcs  lt
hmm/: config.py  enum.py  exceptions.py  main.py
hmm/core/: crypto.py  db.py  exceptions.py  logs.py  middleware.py  ordering.py  paginator.py  types.py
hmm/core/auth/: auth.py  providers.py  schemas.py
hmm/core/filtering/: base.py  sqlalchemy.py
hmm/core/swagger/: swagger.py
hmm/core/utils/: common.py
hmm/crud/: auth.py  base.py  expedition.py  hero.py  journal.py  timetable.py
hmm/crud/tasks/: group.py  subtask_tasks.py  task_group.py
hmm/filters/: expedition.py  group.py  hero.py  subtask_tasks.py  user.py
hmm/models/: __init__.py  auth.py  base.py  expedition.py  hero.py  timetable.py
hmm/models/tasks/: __init__.py  group.py  subtask_tasks.py  task_group.py  typical_tasks.py
hmm/router/: __init__.py  auth.py  base.py  expedition.py  hero.py  main.py  tasks.py
hmm/schemas/: auth.py  base.py  expedition.py  hero.py  timetable.py
hmm/schemas/tasks/: group.py  subtask_tasks.py  task_groups.py
hmm/usecase/: heroes_autopick.py
hmm/usecase/services/grimuar_extractors/: csv.py
hmm/usecase/services/heroes_autopick/: my_greedy.py
